fixing text overflow2

--- a/Css/style.css
+++ b/Css/style.css
@@ -136,7 +136,7 @@ body {
     font-family: "Josefin Sans";
     text-shadow: 2px 2px rgb(184, 57, 35);
     text-transform: uppercase;
-    top: 1vmin;
+    top: 2vmin;
     position: relative;
     text-align: center;
     /* border: dotted blue; */
